// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabContent should match snapshot when active 1`] = `
<section
  className="tab-content "
>
  some content
</section>
`;

exports[`TabContent should match snapshot when inactive 1`] = `
<section
  className="tab-content tab-content_hidden"
>
  some content
</section>
`;
